ecmascript/parser/tests/typescript-errors/recovery/class/has-extends.ts.stderr
error: Expected identifier after this token
 --> $DIR/tests/typescript-errors/recovery/class/has-extends.ts:1:1
  |
1 | class extends Foo {
  | ^^^^^

